<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/background"
    android:orientation="vertical"
    android:padding="10dp"
    tools:ignore="ContentDescription">

    <TextView
        android:id="@+id/dialogHead"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="15dp"
        android:text="@string/quit"
        android:textColor="@color/white"
        android:textSize="28sp" />

    <TextView
        android:id="@+id/dialogDesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/are_you_sure_you_wanna_quit"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:textStyle="bold" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp">

        <Button
            android:id="@+id/closeButton"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:textSize="11sp"
            android:layout_marginEnd="5dp"
            android:backgroundTint="@color/primaryColor"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:text="@string/cancel"
            android:textColor="@android:color/white"
            app:icon="@drawable/ic_close"
            app:iconGravity="end"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/submitExitButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/submitExitButton"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:textSize="11sp"
            android:backgroundTint="@color/primaryColor"
            android:text="@string/submit_and_exit"
            android:textColor="@android:color/white"
            app:icon="@drawable/ic_next"
            app:iconGravity="end"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/closeButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout> 